--- a/src/components/style.css
+++ b/src/components/style.css
@@ -6,25 +6,30 @@
   box-sizing: border-box;
 }
 
-.contianer {
-  margin: 10rem auto;
-  width: 40rem;
-  padding: 1rem;
+.container {
+  margin: 6rem auto;
+  width: 30rem;
+  padding: 2rem 4rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   border-radius: 9px;
 }
 
-p,
 h1 {
   text-align: center;
   padding: 5px 0;
+}
+
+p {
+  text-align: center;
+  padding: 5px 0;
+  margin-bottom: 2rem;
 }
 
 input {
   text-align: center;
   font-size: 1.6rem;
   padding: 5px;
-  margin: 1rem 0;
+  margin-bottom: 2rem;
   width: 100%;
   border-radius: 9px;
   border: none;
@@ -34,13 +39,13 @@ input {
 .task-item {
   display: flex;
   justify-content: space-between;
-  padding: 4px 15px;
+  padding: 8px 16px;
   margin-bottom: 1rem;
   font-size: 1.6rem;
   background-color: lightcoral;
   border-radius: 1rem;
-  color: #222;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  font-family: Arial, sans-serif;
 }
 
 button {
@@ -50,4 +55,5 @@ button {
   background-color: red;
   width: 5rem;
   font-size: 1rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
